[package]
authors = ["Brandon Simpson"]
name = "quic-hyper-stunt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dev-dependencies]
tower = { version = "0.4.13", features = ["full", "tokio", "tokio-stream"] }
tower-http = { version = "0.4.4", features = ["full"] }
criterion = { version = "0.4", features = ["html_reports"] }


[dependencies]
anyhow = "1.0.75"
bytes = { version = "1.5.0", features = ["serde"] }
futures = "0.3.29"
http = "0.2.9"
hyper-rustls = { version = "0.24.1", features = ["webpki-roots", "webpki-tokio", "http2"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["alloc", "getrandom"] }
rcgen = { version = "0.11.3", features = ["zeroize"] }
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
s2n-quic = { version = "1.30.0", features = ["s2n-quic-tls", "s2n-quic-rustls", "provider-event-tracing", "provider-tls-rustls", "provider-tls-s2n"] }
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.40"
url = { version = "2.4.1", features = ["serde"] }
webpki-roots = "0.25.2"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }